--- a/add_blog.html
+++ b/add_blog.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bloggo</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="blog.css">
 </head>
 
@@ -19,7 +19,7 @@
         </div>
     
         <form action ="insert.php" method="POST"> 
-            <!-- Blog Title field -->
+            <!-- Add blog title -->
             <div class="form-group">
                 <label for="post_title">Post Title :</label>
                 <input type="text" id="post_title" name="post_title" class="form-control"/>
