--- a/add_blog.html
+++ b/add_blog.html
@@ -15,7 +15,7 @@
     <div class="container card col-sm-7">
         
         <div class="form-header">
-                <h3> Add Your Blog </h3>
+                <h3> Please Add Your Blog </h3>
         </div>
     
         <form action ="insert.php" method="POST"> 
